# qtpst

./: README.md  appconfig.ini  pyproject.toml  setup.py
qtpst/: __init__.py  __main__.py  messages.py  navigator.py  pstfiles.py  search.py
qtpst/message/: __init__.py  attachments.py  attributes.py  body.py  model.py  nidmodel.py
qtpst/resources/: app.css
tutorial/: README.txt  mbox_helper.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  testQt.py
